<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.ferhat.myapplication.AjouterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/txt_stade"
            android:text="@string/Stade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/txt_stade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:labelFor="@id/txt_date"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_stade" android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:labelFor="@id/txt_date"
            android:text="@string/position"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgDate" android:layout_marginLeft="8dp"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_envoyer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>

        <RadioGroup
            android:id="@+id/rgDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:checkedButton="@+id/rb_immediate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.0">

            <EditText
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_date" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:checkedButton="@+id/rb_my_position"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <RadioButton
                android:id="@+id/rb_my_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_position"/>

            <RadioButton
                android:id="@+id/rb_text_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_position"/>

            <EditText
                android:id="@+id/txt_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/text_position2"
                android:inputType="text" android:layout_marginLeft="32dp"/>

            <RadioButton
                android:id="@+id/rb_map_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/map_position"/>

            <!-- Recherche Google "Android smaller button", premier résultat : https://stackoverflow.com/questions/10258823/how-to-create-really-small-buttons-in-android-from-code -->
            <!-- il faut mettre minWidth et minHeight à 0dp -->
            <Button
                android:id="@+id/btn_open_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="230dp"
                android:layout_marginTop="-36dp"
                android:layout_weight="1"
                android:enabled="false"
                android:fontFamily="sans-serif-condensed"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/open_map"
                android:textSize="12sp" android:layout_marginLeft="230dp"/>

        </RadioGroup>
    </android.support.constraint.ConstraintLayout>

</ScrollView>