<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_height="match_parent"
                                             tools:context="com.example.ferhat.myapplication.MainActivity"
                                             tools:layout_editor_absoluteX="0dp"
                                             tools:layout_editor_absoluteY="81dp" android:layout_width="match_parent">

    <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_from"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_stade"
            app:layout_constraintStart_toStartOf="@+id/textView11"
    />

    <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_adress"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="@+id/textView12"
    />

    <TextView
            android:id="@+id/tv_adress"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="ICI_L _ADRESSE\nDU\nSTADE"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>

    <TextView
            android:id="@+id/tv_stade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="ICI_LE_STADE"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginLeft="16dp"/>

    <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="ICI_LA_DATE"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_stade"
            app:layout_constraintStart_toStartOf="@+id/tv_stade"/>

    <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_pk"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"/>

    <TextView
            android:id="@+id/tv_pk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="PRIMARY_KEY"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginLeft="8dp"/>


    <fragment
            android:id="@+id/carte"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_adress"/>

</android.support.constraint.ConstraintLayout>